Added Critera D, we almost doneeeee

--- a/IA Stuff/cover_page.htm
+++ b/IA Stuff/cover_page.htm
@@ -117,7 +117,7 @@
 
 <tr>
 <td width=320 colspan=2><p><b>Functionality (additional videos may be added)</b></p></td>
-<td width=400><a href="Documentation/Crit_D_Video.avi">Video of product</a></td>
+<td width=400><a href="Documentation/My_Movie.mp4">Video of product</a></td>
 <td width=200></td>
 <tr>
 
